# postgres-aws-s3

./: docker-compose.yml  manual_testing.sql  pyproject.toml
experimental/: fifo_query_export_to_s3.sql  fifo_test.sql
extension/: Makefile  aws_s3--0.0.1.sql  aws_s3.control
mock-servers/postgres/: Dockerfile
mock-servers/postgres/docker-entrypoint-initdb.d/: install_extension.sql
tests/: test_extension.py  test_install.py
